--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 <i class="fa-solid fa-key"></i>
             </div>
 
-            <p><input type="checkbox">Remember Me <a href="#">Forget Password</a></p>
+            <p><input type="checkbox"> Remember Me <a href="#"><br>Forget Password</a></p>
 
             <input id="btn" type="submit" value="Login">
 
-            <p>Don't have a account? <a href="#">Register</a></p>
+            <p>Don't have a account? <a href="#"><br>Register</a></p>
 
         </form>
     </div>
